--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "api/*": ["src/api/*"],
       "assets/*": ["src/assets/*"],
+      "components/*": ["src/components/*"],
+      "pages/*": ["src/pages/*"],
+      "router/*": ["src/router/*"],
+      "theme/*": ["src/theme/*"],
     }
   }
 }
